<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Music World</string>
    <!-- Category name for "Now Playing" [CHAR LIMIT=20] -->
    <string name="category_now_playing">@string/activity_name_now_playing</string>
    <!-- Category name for "Songs" [CHAR LIMIT=20] -->
    <string name="category_songs">@string/activity_name_songs</string>
    <!-- Category name for "Artist" [CHAR LIMIT=20] -->
    <string name="category_artist">@string/activity_name_artist_band</string>
    <!-- Category name for "Song of the Day" [CHAR LIMIT=20] -->
    <string name="category_song_of_the_day">@string/activity_name_song_of_the_day</string>

    <!-- Info about Main activity. -->
    <string name="text_view_main_info">This screen is the main screen of the app. Contains clickable TextViews that open the required activities (the rest activities of the app).</string>

    <!-- Title for "Now Playing" activity. [CHAR LIMIT=12] -->
    <string name="activity_name_now_playing">Now Playing</string>
    <!-- Info about "Now Playing" activity. -->
    <string name="text_view_now_playing_info">This screen contains the Media Player (play/pause/rewind/forward the selected song) and info about the song that is currently playing. Note: \"android.media.MediaPlayer\" namespace must be imported to be able to use the \"MediaPlayer\" class.</string>
    <!-- Text to indicate the position of the media player. -->
    <string name="media_player_here">Add the Media Player here...</string>

    <!-- Title for "Songs" activity. [CHAR LIMIT=12] -->
    <string name="activity_name_songs">Songs</string>
    <!-- Info about "Songs" activity. -->
    <string name="text_view_songs_info">This screen contains a list with the songs of the app. Click on a song from the list below to display corresponding info...</string>

    <!-- Title for "Artist/Band" activity. [CHAR LIMIT=12] -->
    <string name="activity_name_artist_band">Artist/Band</string>
    <!-- Info about "Artist/Band" activity. -->
    <string name="text_view_artist_band_info">This screen contains a list with the artists/bands of the app. Click on an artist/band from the list below to display corresponding info...</string>

    <!-- Title for "Song Of The Day" activity. [CHAR LIMIT=12] -->
    <string name="activity_name_song_of_the_day">Song of the Day</string>
    <!-- Info about "Song Of The Day" activity. -->
    <string name="text_view_song_of_the_day_info">This screen contains the most loved song of the day.</string>
    <!-- Song of the day => Title - Artist/Band name. -->
    <string name="text_view_song_of_the_day">Title - Artist/Band</string>
    <!-- Toast message for playing the song of the day. -->
    <string name="playing_the_song_of_the_day">Play <xliff:g id="song_of_the_day" example="So What - P!nk">%s</xliff:g>!!</string>

    <!-- Button texts -->
    <string name="button_now_playing">Now Playing</string>
    <string name="button_home">Go Home</string>
    <string name="button_play_song_of_the_day">Play it !!</string>

    <!-- Media Player Buttons -->
    <string name="play"><![CDATA[>]]></string>
    <string name="rewind"><![CDATA[<<]]></string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="pause">||</string>

    <!-- Toast messages for Media Player -->
    <string name="msg_play">Playing song</string>
    <string name="msg_pause">Pause song</string>
    <string name="msg_backward">You have jumped backward <xliff:g id="seconds" example="3">%d</xliff:g> seconds</string>
    <string name="msg_forward">You have jumped forward <xliff:g id="seconds" example="3">%d</xliff:g> seconds</string>

</resources>
