<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ocean_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_song_of_the_day_info"
            style="@style/InfoText"
            android:layout_marginBottom="@dimen/app_view_distance"
            android:background="@color/infoMain"
            android:text="@string/text_view_main_info"/>

        <TextView
            android:id="@+id/textViewNowPlaying"
            style="@style/ListItemStyle"
            android:text="@string/category_now_playing" />

        <TextView
            android:id="@+id/textViewSongs"
            style="@style/ListItemStyle"
            android:text="@string/category_songs" />

        <TextView
            android:id="@+id/textViewArtist"
            style="@style/ListItemStyle"
            android:text="@string/category_artist" />

        <TextView
            android:id="@+id/textViewGender"
            style="@style/ListItemStyle"
            android:text="@string/category_song_of_the_day" />

    </LinearLayout>

</ScrollView>